--- a/LostAndFoundApp/LostAndFoundApp/SpeechToText/SpeechToText/SineWaveViewController.xib
+++ b/LostAndFoundApp/LostAndFoundApp/SpeechToText/SpeechToText/SineWaveViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SineWaveViewController">
@@ -20,11 +20,13 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="272"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="4qn-K8-OWF">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4qn-K8-OWF">
                     <rect key="frame" x="20" y="184" width="280" height="35"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
-                    <animations/>
                     <color key="backgroundColor" red="0.90588241815567017" green="0.90588241815567017" blue="0.90588241815567017" alpha="1" colorSpace="deviceRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="280" id="Lgk-lg-TEa"/>
+                        <constraint firstAttribute="height" constant="35" id="rQh-bx-q1W"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                     <state key="normal" title="Done">
                         <color key="titleColor" red="0.0" green="0.56862747670000002" blue="1" alpha="1" colorSpace="deviceRGB"/>
@@ -35,11 +37,13 @@
                         <action selector="done:" destination="-1" eventType="touchUpInside" id="oEf-kJ-hQ9"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="CKp-mM-npZ">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CKp-mM-npZ">
                     <rect key="frame" x="20" y="227" width="280" height="35"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
-                    <animations/>
                     <color key="backgroundColor" red="0.90588241815567017" green="0.90588241815567017" blue="0.90588241815567017" alpha="1" colorSpace="deviceRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="280" id="knf-Lr-QxS"/>
+                        <constraint firstAttribute="height" constant="35" id="zfd-QW-3zY"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                     <state key="normal" title="Cancel">
                         <color key="titleColor" red="0.0" green="0.56862747670000002" blue="1" alpha="1" colorSpace="deviceRGB"/>
@@ -49,39 +53,50 @@
                         <action selector="cancel" destination="-1" eventType="touchUpInside" id="hYx-OW-Lgk"/>
                     </connections>
                 </button>
-                <view contentMode="scaleToFill" id="cId-SU-EDE" customClass="WaveDisplay">
-                    <rect key="frame" x="0.0" y="110" width="320" height="50"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
-                    <animations/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cId-SU-EDE" customClass="WaveDisplay">
+                    <rect key="frame" x="0.0" y="111" width="320" height="50"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="cId-SU-EDE" secondAttribute="height" multiplier="32:5" id="wwn-Lu-bRe"/>
+                    </constraints>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mic.png" id="eNr-tQ-VXW">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="mic.png" translatesAutoresizingMaskIntoConstraints="NO" id="eNr-tQ-VXW">
                     <rect key="frame" x="96" y="48" width="128" height="128"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
-                    <animations/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="128" id="1Yq-6W-VZ5"/>
+                        <constraint firstAttribute="width" constant="128" id="49W-RJ-BT8"/>
+                    </constraints>
                 </imageView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Speak Now" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="M7V-6q-WDv">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Speak Now" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7V-6q-WDv">
                     <rect key="frame" x="20" y="0.0" width="280" height="40"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
-                    <animations/>
                     <fontDescription key="fontDescription" name="AmericanTypewriter-Bold" family="American Typewriter" pointSize="20"/>
                     <color key="textColor" red="0.90588241820000004" green="0.90588241820000004" blue="0.90588241820000004" alpha="1" colorSpace="deviceRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg.png" id="8Oh-Fn-75b">
+                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Oh-Fn-75b">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="272"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    <animations/>
                 </imageView>
             </subviews>
-            <animations/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="cId-SU-EDE" secondAttribute="trailing" id="2HL-yo-Km3"/>
+                <constraint firstAttribute="bottom" secondItem="CKp-mM-npZ" secondAttribute="bottom" constant="10" id="DdG-n4-8hI"/>
+                <constraint firstItem="M7V-6q-WDv" firstAttribute="top" secondItem="1" secondAttribute="top" id="K3V-3l-5DP"/>
+                <constraint firstItem="4qn-K8-OWF" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="LgK-Db-2Hw"/>
+                <constraint firstItem="eNr-tQ-VXW" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="OLj-XW-SFc"/>
+                <constraint firstItem="cId-SU-EDE" firstAttribute="centerY" secondItem="1" secondAttribute="centerY" id="UJv-pd-46V"/>
+                <constraint firstItem="cId-SU-EDE" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="bnD-da-Wlf"/>
+                <constraint firstItem="CKp-mM-npZ" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="dhC-ax-kba"/>
+                <constraint firstItem="4qn-K8-OWF" firstAttribute="top" secondItem="eNr-tQ-VXW" secondAttribute="bottom" constant="10" id="g63-Ir-lb2"/>
+                <constraint firstItem="CKp-mM-npZ" firstAttribute="top" secondItem="4qn-K8-OWF" secondAttribute="bottom" constant="8" id="h1q-6k-LJP"/>
+                <constraint firstItem="M7V-6q-WDv" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" id="nrd-Yh-ZWb"/>
+                <constraint firstAttribute="trailing" secondItem="M7V-6q-WDv" secondAttribute="trailing" constant="20" id="pLw-Bh-TVo"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
         </view>
     </objects>
     <resources>
-        <image name="bg.png" width="640" height="911"/>
         <image name="mic.png" width="128" height="128"/>
     </resources>
 </document>
