--- a/LostAndFoundApp/LostAndFoundApp/SpeechToText/SpeechToText/SineWaveViewController.xib
+++ b/LostAndFoundApp/LostAndFoundApp/SpeechToText/SpeechToText/SineWaveViewController.xib
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SineWaveViewController">
             <connections>
-                <outlet property="backgroundImage" destination="8Oh-Fn-75b" id="dHU-Hw-oGK"/>
                 <outlet property="cancelButton" destination="CKp-mM-npZ" id="2cW-Zv-v8f"/>
                 <outlet property="doneButton" destination="4qn-K8-OWF" id="YbF-JD-zed"/>
                 <outlet property="header" destination="M7V-6q-WDv" id="ihx-Tb-5gm"/>
@@ -34,7 +34,6 @@
                     </state>
                     <connections>
                         <action selector="done" destination="-1" eventType="touchUpInside" id="vPk-18-yx6"/>
-                        <action selector="done:" destination="-1" eventType="touchUpInside" id="oEf-kJ-hQ9"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CKp-mM-npZ">
@@ -73,9 +72,6 @@
                     <color key="textColor" red="0.90588241820000004" green="0.90588241820000004" blue="0.90588241820000004" alpha="1" colorSpace="deviceRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Oh-Fn-75b">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="272"/>
-                </imageView>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
