--- a/LostAndFoundApp/LostAndFoundApp/Base.lproj/Main.storyboard
+++ b/LostAndFoundApp/LostAndFoundApp/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dXW-FM-kvs">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -205,13 +206,22 @@
                                     <action selector="tapLostSwitch:" destination="9Cy-kn-Lam" eventType="valueChanged" id="zQY-Cn-Pfg"/>
                                 </connections>
                             </switch>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lwj-3W-9Gm">
+                                <rect key="frame" x="122" y="517" width="146" height="30"/>
+                                <state key="normal" title="Show Tracked Places"/>
+                                <connections>
+                                    <segue destination="iGy-YW-DPF" kind="push" identifier="trackedLocations" id="9xB-SW-6iy"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.88009697090000005" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="DvB-gk-oR9" firstAttribute="leading" secondItem="ROx-90-m7e" secondAttribute="leadingMargin" constant="5" id="2qK-P9-OR3"/>
                             <constraint firstItem="Wgh-qr-rgd" firstAttribute="top" secondItem="sCV-RP-5Tq" secondAttribute="bottom" constant="15" id="2yK-lX-2Kq"/>
+                            <constraint firstItem="tb9-lh-SBo" firstAttribute="top" secondItem="Lwj-3W-9Gm" secondAttribute="bottom" constant="10" id="3bF-Er-UO8"/>
                             <constraint firstItem="ybZ-JY-nJD" firstAttribute="top" relation="greaterThanOrEqual" secondItem="f8f-3M-DCq" secondAttribute="bottom" constant="9" id="4fE-W1-fju"/>
                             <constraint firstItem="sCV-RP-5Tq" firstAttribute="top" secondItem="ns1-Tw-fgU" secondAttribute="bottom" constant="5" id="8Ql-Kj-2et"/>
+                            <constraint firstItem="Lwj-3W-9Gm" firstAttribute="centerX" secondItem="ROx-90-m7e" secondAttribute="centerX" id="BgG-Fk-cs5"/>
                             <constraint firstItem="ybZ-JY-nJD" firstAttribute="leading" secondItem="ROx-90-m7e" secondAttribute="leadingMargin" constant="5" id="HAF-bA-lZ7"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Wgh-qr-rgd" secondAttribute="trailing" constant="5" id="JXZ-I7-49v"/>
                             <constraint firstItem="Wgh-qr-rgd" firstAttribute="centerX" secondItem="ROx-90-m7e" secondAttribute="centerX" id="JfH-BI-wRK"/>
@@ -264,6 +274,74 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1V5-b5-k1h" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2155" y="-490"/>
+        </scene>
+        <!--Tracked Locations View Controller-->
+        <scene sceneID="uXv-bF-Mmo">
+            <objects>
+                <tableViewController id="iGy-YW-DPF" customClass="TrackedLocationsViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="ZR9-hx-96b">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="trackedPoint" id="R8B-bD-p1m">
+                                <rect key="frame" x="0.0" y="92" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="R8B-bD-p1m" id="UKO-4G-BPi">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RAN-1W-pZJ">
+                                            <rect key="frame" x="5" y="21.5" width="404" height="21.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Place" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LwV-V8-YGL">
+                                            <rect key="frame" x="5" y="0.0" width="404" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="RAN-1W-pZJ" firstAttribute="top" secondItem="LwV-V8-YGL" secondAttribute="bottom" constant="1" id="GA9-8a-PGq"/>
+                                        <constraint firstItem="LwV-V8-YGL" firstAttribute="top" secondItem="UKO-4G-BPi" secondAttribute="top" id="Jm0-a8-dJC"/>
+                                        <constraint firstItem="RAN-1W-pZJ" firstAttribute="leading" secondItem="UKO-4G-BPi" secondAttribute="leading" constant="5" id="PqT-cx-LoP"/>
+                                        <constraint firstAttribute="bottom" secondItem="RAN-1W-pZJ" secondAttribute="bottom" constant="1" id="Ywo-LC-Rwa"/>
+                                        <constraint firstAttribute="trailing" secondItem="RAN-1W-pZJ" secondAttribute="trailing" constant="5" id="jNU-1o-IUN"/>
+                                        <constraint firstItem="LwV-V8-YGL" firstAttribute="leading" secondItem="UKO-4G-BPi" secondAttribute="leading" constant="5" id="rYy-86-lBt"/>
+                                        <constraint firstAttribute="trailing" secondItem="LwV-V8-YGL" secondAttribute="trailing" constant="5" id="xGd-5A-b8b"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="iGy-YW-DPF" id="idW-Gs-JeC"/>
+                            <outlet property="delegate" destination="iGy-YW-DPF" id="Bqb-eF-J1R"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="dBe-Oi-y22">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="ImF-04-KYu">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="8gW-ad-ceN">
+                                <rect key="frame" x="359" y="4" width="35" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="Delete.png">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="btnDeleteAll:" destination="iGy-YW-DPF" eventType="touchUpInside" id="Ajm-wJ-HEe"/>
+                                </connections>
+                            </button>
+                            <connections>
+                                <action selector="btnDeleteAll:" destination="iGy-YW-DPF" id="rAl-5I-a9A"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tB8-3h-KLW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2695" y="-490"/>
         </scene>
         <!--Setting-->
         <scene sceneID="wg7-f3-ORb">
@@ -566,12 +644,12 @@
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NEC-Fa-yzW">
                                 <rect key="frame" x="88" y="461" width="255" height="58"/>
-                                <state key="normal" image="170F1C76-2EAD-496A-885D-6FF4FC7FF4F2"/>
+                                <state key="normal" image="A7CBB634-8C4E-47E0-83D0-1A5D782C955F"/>
                                 <connections>
                                     <segue destination="49e-Tb-3d3" kind="push" identifier="ShowTabbarView" id="PJ4-Gw-BlD"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="02A14FD4-FFB2-43DF-A229-733ACE574471" translatesAutoresizingMaskIntoConstraints="NO" id="hOM-2t-BaU">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="5646EAD5-0FC5-4BE3-B1A6-2A6539845C53" translatesAutoresizingMaskIntoConstraints="NO" id="hOM-2t-BaU">
                                 <rect key="frame" x="114" y="81" width="203" height="204"/>
                             </imageView>
                         </subviews>
@@ -844,9 +922,26 @@
             </objects>
             <point key="canvasLocation" x="-84" y="-855"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="xR4-pw-Qyp">
+            <objects>
+                <viewController id="3QX-2t-d7l" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KtC-yd-9Ut"/>
+                        <viewControllerLayoutGuide type="bottom" id="XZ7-Jz-62G"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rXi-hb-ZNQ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9at-EQ-d6N" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
     </scenes>
     <resources>
-        <image name="02A14FD4-FFB2-43DF-A229-733ACE574471" width="256" height="256">
+        <image name="5646EAD5-0FC5-4BE3-B1A6-2A6539845C53" width="256" height="256">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGOzxYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBEW
 GxwgISksLzU4VSRudWxs1AkKCwwNDg8QViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBzV05TQ29sb3KA
@@ -5287,7 +5382,7 @@ AAQOSAAEDlAABA5TAAQOWAAEDmcABA5rAAQOcgAEDnoABA6HAAQOjAAEDo4ABA6QAAQOlQAEDp0ABA6g
 AAQOpQAEDq0ABA6wAAQOwgAEDsUABA7KAAAAAAAABAEAAAAAAAAAPwAAAAAAAAAAAAAAAAAEDsw
 </mutableData>
         </image>
-        <image name="170F1C76-2EAD-496A-885D-6FF4FC7FF4F2" width="401" height="82">
+        <image name="A7CBB634-8C4E-47E0-83D0-1A5D782C955F" width="401" height="82">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGOzxYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBEW
 GxwgISksLzU4VSRudWxs1AkKCwwNDg8QViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBzV05TQ29sb3KA
@@ -7552,8 +7647,9 @@ AAIQaAACEG0AAhB1AAIQeAACEIoAAhCNAAIQkgAAAAAAAAQBAAAAAAAAAD8AAAAAAAAAAAAAAAAAAhCU
 A
 </mutableData>
         </image>
-        <image name="Microphone Filled-25.png" width="25" height="25"/>
-        <image name="Right 2-25.png" width="25" height="25"/>
+        <image name="Delete.png" width="35" height="35"/>
+        <image name="Microphone Filled-25.png" width="40" height="40"/>
+        <image name="Right 2-25.png" width="40" height="40"/>
         <image name="images.png" width="225" height="225"/>
         <image name="logout-button-blue-hi.png" width="600" height="233"/>
     </resources>
